--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ html {
 #board{
 	font-size: 50px;
 	width: 3.45em;
-	height: 3.45em;
+	height: 5.75em;
 	background-color: #eee;
 	margin-right: auto;
 	margin-left: auto;
@@ -37,4 +37,18 @@ html {
 	float: left;
 	padding: 0;
 	margin: 0;
+}
+#victory{
+	height: 1.15em;
+	color: #00cc00;
+	font-size: .78em;
+}
+
+#new-game{
+	font-size: .5em;
+	color: white;
+	text-decoration: none;
+	background-color: #0000aa;
+	border-radius: 10px;
+	padding: 5px 35px;
 }
